chore: try canvas container
- Added background and content based on wireframe
- Currently, game does not run in the container

Co-Authored-By: Saviogb <181909727+Saviogb@users.noreply.github.com>
Co-Authored-By: lijoyvictor22 <181682398+lijoyvictor22@users.noreply.github.com>

--- a/Project/index.html
+++ b/Project/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
-    <title>Eco-Adventure: A Mission to Save the Planet</title>
+    <title>Eco-Adventures: A Mission to Save the Planets</title>
 
     <!-- <script src="https://cdn.jsdelivr.net/npm/phaser@3.86.0/dist/phaser-arcade-physics.min.js"></script> --> <!-- One way to load phaser's content -->
     <script src="lib/phaser.js"></script> <!-- another way to load phaser's content -->
@@ -12,6 +12,7 @@
     <script src="scripts/Scenes/IntroScene.js" defer></script>
     <script src="scripts/Scenes/MainMenu.js" defer></script>
     <script src="scripts/main.js" defer></script>
+    <script src="scripts/index-content.js"></script>
     <link rel="stylesheet" href="styles/style.css">
     
     <style>
@@ -31,6 +32,59 @@
 	</style>
 </head>
 <body>
-    <div id="game-container"></div>
+    <div class="background" style="background-image: url('assets/background.jpg');"></div>
+
+    <header>
+        <div class="logo">
+            <img src="assets/Logo.png" alt="Webyte Logo">
+        </div>
+        <nav class="top-nav">
+            <a href="#">Topic 1</a>
+            <a href="#">Topic 2</a>
+            <a href="#">Topic 3</a>
+            <a href="#">Topic 4</a>
+        </nav>
+    </header>
+
+    <div class="container">
+        <aside class="left-sidebar">
+            <h3>Levels</h3>
+            <ul>
+                <li class="level-box">Level 1</li>
+                <li class="level-box">Level 2</li>
+                <li class="level-box">Level 3</li>
+                <li class="level-box">Level 4</li>
+                <li class="level-box">Level 5</li>
+            </ul>
+        </aside>
+
+        <main class="main-content">
+            <canvas id="gameCanvas">
+                <div id="game-container"></div>
+            </canvas>
+            <div class="how-to-play">
+                <h3>How to Play</h3>
+                <p id="instructions">Instructions go here.</p>
+            </div>
+        </main>
+
+        <aside class="right-sidebar">
+            <h3>Features</h3>
+            <ul>
+                <li>Feature 1</li>
+                <li>Feature 2</li>
+                <li>Feature 3</li>
+                <li>Feature 4</li>
+            </ul>
+            <div class="no-internet">
+                <p>No internet? Download here: <a href="#">Link to game as electron app</a></p>
+            </div>
+        </aside>
+    </div>
+
+    <footer>
+        <p>  &copy; 2024 Webyte </p>
+    </footer>
+    
 </body>
 </html>
