feat: Planet 3 Level 1
- Planet 3 Level 2 is still under development

--- a/Project/game.html
+++ b/Project/game.html
@@ -12,6 +12,8 @@
     <script src="scripts/Scenes/CrashScene.js" defer></script>
     <script src="scripts/Scenes/IntroScene.js" defer></script>
     <script src="scripts/Scenes/MainMenu.js" defer></script>
+    <script src="scripts/Scenes/Planet3Level1.js" defer></script>
+    <script src="scripts/Scenes/Planet3Level2.js" defer></script>
     <script src="scripts/main.js" defer></script>
     <link rel="stylesheet" href="styles/style.css">
     
