--- a/Project/game.html
+++ b/Project/game.html
@@ -14,6 +14,7 @@
     <script src="scripts/Scenes/MainMenu.js" defer></script>
     <script src="scripts/Scenes/Planet3Level1.js" defer></script>
     <script src="scripts/Scenes/Planet3Level2.js" defer></script>
+    <script src="scripts/Scenes/Planet3Level3.js" defer></script>
     <script src="scripts/main.js" defer></script>
     <link rel="stylesheet" href="styles/style.css">
     
