feat: add Lijoy's part
- Added Planet 4 and all associated content
- Fixed some bugs and issues

--- a/Project/game.html
+++ b/Project/game.html
@@ -27,6 +27,12 @@
     <script src="scripts/Scenes/Planet3Level1.js" defer></script>
     <script src="scripts/Scenes/Planet3Level2.js" defer></script>
     <script src="scripts/Scenes/Planet3Level3.js" defer></script>
+    <script src="scripts/Scenes/Planet4IntroScene.js" defer></script>
+    <script src="scripts/Scenes/Planet4Level1.js" defer></script>
+    <script src="scripts/Scenes/Planet4Level2.js" defer></script>
+    <script src="scripts/Scenes/Planet4Level3.js" defer></script>
+    <script src="scripts/Scenes/Planet4Level4.js" defer></script>
+    <script src="scripts/Scenes/TransitionScene.js" defer></script>
 
     <script src="scripts/main.js" defer></script>
     <link rel="stylesheet" href="styles/style.css">
